packages/fuels-macros/tests/ui/setup_program_test/invalid_project_path.rs
use fuels_macros::setup_program_test;

setup_program_test!(Abigen(Contract(name = "MyContract", project = ".")));

fn main() {}
